# vector-search

./: .gitignore  02-vector-search.ipynb  2.7_vector-search-db.ipynb  2.8_vector-search-pgvector.ipynb  README.md  main.py  pyproject.toml  rag_helper.py
homework/: 02_homework.ipynb  pyproject.toml
onnx/: main.py  onnx.ipynb  pyproject.toml
